Added get path of Clients and Pieces. Fixed get path of Contracts and ImportedMachines. Added new API specification.
