# src/controllers/Clients.ts
@@ -1,0 +1,19 @@
+"use strict";
+
+import { ClientsService } from "../service";
+import { CustomNext, CustomRequest, CustomResponse } from "../utils/customsHandlers";
+import { ParametersComplete, ParametersIdDeleted, Utilities } from "../utils/utilities";
+import { ResponsePayload } from "../utils/writer";
+
+module.exports.getClients = (req: CustomRequest, res: CustomResponse, next: CustomNext) => {
+  const params: ParametersComplete = Utilities.checkAllParametersGet(req.swagger.params, res);
+  if (!params) {
+    return;
+  }
+  ClientsService.getClients(params)
+    .then((response: any) => {
+      ResponsePayload.response(res, response);
+    }).catch((response: any) => {
+      ResponsePayload.response400(res, response);
+    });
+};
