# src/controllers/Pieces.ts
@@ -1,0 +1,19 @@
+"use strict";
+
+import { PiecesService } from "../service";
+import { CustomNext, CustomRequest, CustomResponse } from "../utils/customsHandlers";
+import { ParametersComplete, Utilities } from "../utils/utilities";
+import { ResponsePayload } from "../utils/writer";
+
+module.exports.getPieces = (req: CustomRequest, res: CustomResponse, next: CustomNext) => {
+  const params: ParametersComplete = Utilities.checkAllParametersGet(req.swagger.params, res);
+  if (!params) {
+    return;
+  }
+  PiecesService.getPieces(params)
+    .then((response: any) => {
+      ResponsePayload.response(res, response);
+    }).catch((response: any) => {
+      ResponsePayload.response400(res, response);
+    });
+};
