# src/controllers/index.ts
@@ -1,3 +1,5 @@
+export * from "./Clients";
 export * from "./Contracts";
 export * from "./ImportedMachines";
 export * from "./Machines";
+export * from "./Pieces";
