# src/models/reviewed.ts
@@ -1,0 +1,18 @@
+/**
+ * Ravimoshark Contract API
+ *
+ * OpenAPI spec version: 1.0.0
+ * Contact: dev@ravimoshark.com
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+export type Reviewed = "REVIEWED" | "NOT_REVIEWED" | "ALL";
+
+export const Deleted = {
+    ALL: "ALL" as Reviewed,
+    DELETED: "DELETED" as Reviewed,
+    REVIEWED: "REVIEWED" as Reviewed
+};
