# src/models/valid.ts
@@ -1,0 +1,18 @@
+/**
+ * Ravimoshark Contract API
+ *
+ * OpenAPI spec version: 1.0.0
+ * Contact: dev@ravimoshark.com
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+export type Valid = "VALID" | "INVALID" | "ALL";
+
+export const Deleted = {
+    ALL: "ALL" as Deleted,
+    INVALID: "INVALID" as Deleted,
+    VALID: "VALID" as Deleted
+};
